--- a/Source/Tests/Ranges.Tests/Ranges.Tests.csproj
+++ b/Source/Tests/Ranges.Tests/Ranges.Tests.csproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View_Ints_Tests.cs" />
+    <Compile Include="View_Iota_Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Lib\Ranges\Ranges.csproj">
