--- a/Source/Tests/Ranges.Tests/packages.config
+++ b/Source/Tests/Ranges.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="FluentAssertions" version="4.18.0" targetFramework="net462" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net462" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="xunit" version="2.1.0" targetFramework="net462" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net462" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net462" />
