Add functional lower case wrapper methods

--- a/Source/Lib/Ranges/Ranges.csproj
+++ b/Source/Lib/Ranges/Ranges.csproj
@@ -39,6 +39,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Functional.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
   </ItemGroup>
