--- a/Source/Lib/Ranges/Ranges.csproj
+++ b/Source/Lib/Ranges/Ranges.csproj
@@ -41,7 +41,8 @@
   <ItemGroup>
     <Compile Include="Functional.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Range.cs" />
+    <Compile Include="Range_Ints.cs" />
+    <Compile Include="Range_Iota.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
