--- a/Source/Lib/Ranges/Ranges.csproj
+++ b/Source/Lib/Ranges/Ranges.csproj
@@ -39,7 +39,8 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Functional.cs" />
+    <Compile Include="Functional_Ints.cs" />
+    <Compile Include="Functional_Iota.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range_Ints.cs" />
     <Compile Include="Range_Iota.cs" />
