--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -39,13 +39,13 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Functional_Ints.cs" />
-    <Compile Include="Functional_Iota.cs" />
+    <Compile Include="Ranges\Functional_Ints.cs" />
+    <Compile Include="Ranges\Functional_Iota.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Range%271.cs" />
-    <Compile Include="Range%272.cs" />
-    <Compile Include="Range_Ints.cs" />
-    <Compile Include="Range_Iota.cs" />
+    <Compile Include="Ranges\Range%271.cs" />
+    <Compile Include="Ranges\Range%272.cs" />
+    <Compile Include="Ranges\Range_Ints.cs" />
+    <Compile Include="Ranges\Range_Iota.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
