Add generic interface with two type parameters for iterators

--- a/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
+++ b/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
@@ -79,6 +79,7 @@
   <ItemGroup>
     <Compile Include="Iterators\Interfaces\IIterable_Tests.cs" />
     <Compile Include="Iterators\Interfaces\IIterator%271_Tests.cs" />
+    <Compile Include="Iterators\Interfaces\IIterator%272_Tests.cs" />
     <Compile Include="Iterators\Interfaces\IIterator_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ranges\Range_Ints_Tests.cs" />
