--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -39,6 +39,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Iterators\Interfaces\IConstIterator.cs" />
     <Compile Include="Iterators\Interfaces\IIterable.cs" />
     <Compile Include="Iterators\Interfaces\IIterator%271.cs" />
     <Compile Include="Iterators\Interfaces\IIterator%272.cs" />
