--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Iterators\Interfaces\IConstIterator%271.cs" />
+    <Compile Include="Iterators\Interfaces\IConstIterator%272.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator.cs" />
     <Compile Include="Iterators\Interfaces\IIterable.cs" />
     <Compile Include="Iterators\Interfaces\IIterator%271.cs" />
