--- a/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
+++ b/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Iterators\Interfaces\IIterator%271_Tests.cs" />
     <Compile Include="Iterators\Interfaces\IIterator%272_Tests.cs" />
     <Compile Include="Iterators\Interfaces\IIterator_Tests.cs" />
+    <Compile Include="Iterators\Iterator_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ranges\Range_Ints_Tests.cs" />
     <Compile Include="Ranges\Range_Iota_Tests.cs" />
