--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Iterators\Interfaces\IIterator%272.cs" />
     <Compile Include="Iterators\Interfaces\IIterator.cs" />
     <Compile Include="Iterators\Iterator%271.cs" />
+    <Compile Include="Iterators\Iterator%272.cs" />
     <Compile Include="Iterators\Iterator.cs" />
     <Compile Include="Ranges\Functional_Ints.cs" />
     <Compile Include="Ranges\Functional_Iota.cs" />
