Add class for non generic const iterator implementation

--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -39,6 +39,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Iterators\ConstIterator.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%271.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%272.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator.cs" />
