--- a/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
+++ b/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
@@ -77,6 +77,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Iterators\ConstIterator%271_Tests.cs" />
     <Compile Include="Iterators\ConstIterator_Tests.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%271_Tests.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%272_Tests.cs" />
