Add extension methods for generating iterators from various collection types

--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Iterators\Iterator%271.cs" />
     <Compile Include="Iterators\Iterator%272.cs" />
     <Compile Include="Iterators\Iterator.cs" />
+    <Compile Include="Iterators\IteratorExtensions.cs" />
     <Compile Include="Ranges\Functional_Ints.cs" />
     <Compile Include="Ranges\Functional_Iota.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
