--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Iterators\ConstIterator%271.cs" />
     <Compile Include="Iterators\ConstIterator%272.cs" />
     <Compile Include="Iterators\ConstIterator.cs" />
+    <Compile Include="Iterators\Helpers\ListIteratorHelper.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%271.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%272.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator.cs" />
