--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Iterators\Helpers\ArrayIteratorHelper%272.cs" />
     <Compile Include="Iterators\Helpers\CollectionIteratorHelper%271.cs" />
     <Compile Include="Iterators\Helpers\ConcurrentQueueIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Helpers\ConcurrentStackIteratorHelper%271.cs" />
     <Compile Include="Iterators\Helpers\ListIteratorHelper%271.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%271.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%272.cs" />
