Add iterator helper for concurrent bags

--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Iterators\Helpers\ArrayIteratorHelper%271.cs" />
     <Compile Include="Iterators\Helpers\ArrayIteratorHelper%272.cs" />
     <Compile Include="Iterators\Helpers\CollectionIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Helpers\ConcurrentBagIteratorHelper%271.cs" />
     <Compile Include="Iterators\Helpers\ConcurrentQueueIteratorHelper%271.cs" />
     <Compile Include="Iterators\Helpers\ConcurrentStackIteratorHelper%271.cs" />
     <Compile Include="Iterators\Helpers\ListIteratorHelper%271.cs" />
