Add iterator helper for sorted lists

--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -42,18 +42,19 @@
     <Compile Include="Iterators\ConstIterator%271.cs" />
     <Compile Include="Iterators\ConstIterator%272.cs" />
     <Compile Include="Iterators\ConstIterator.cs" />
-    <Compile Include="Iterators\Helpers\ArrayIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\ArrayIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Helpers\ArrayListIteratorHelper.cs" />
-    <Compile Include="Iterators\Helpers\CollectionIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\ConcurrentBagIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\ConcurrentDictionaryIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Helpers\ConcurrentQueueIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\ConcurrentStackIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\DictionaryIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Helpers\ListIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\QueueIteratorHelper.cs" />
-    <Compile Include="Iterators\Helpers\StackIteratorHelper.cs" />
+    <Compile Include="Iterators\Helpers\NotConst\ArrayIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Helpers\NotConst\ArrayIteratorHelper%272.cs" />
+    <Compile Include="Iterators\Helpers\NotConst\ArrayListIteratorHelper.cs" />
+    <Compile Include="Iterators\Helpers\NotConst\CollectionIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Helpers\NotConst\ConcurrentBagIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Helpers\NotConst\ConcurrentDictionaryIteratorHelper%272.cs" />
+    <Compile Include="Iterators\Helpers\NotConst\ConcurrentQueueIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Helpers\NotConst\ConcurrentStackIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Helpers\NotConst\DictionaryIteratorHelper%272.cs" />
+    <Compile Include="Iterators\Helpers\NotConst\ListIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Helpers\NotConst\QueueIteratorHelper.cs" />
+    <Compile Include="Iterators\Helpers\NotConst\SortedListIteratorHelper.cs" />
+    <Compile Include="Iterators\Helpers\NotConst\StackIteratorHelper.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%271.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%272.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator.cs" />
