--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Iterators\ConstIterator.cs" />
     <Compile Include="Iterators\Helpers\Const\ArrayListConstIteratorHelper.cs" />
     <Compile Include="Iterators\Helpers\Const\QueueConstIteratorHelper.cs" />
+    <Compile Include="Iterators\Helpers\Const\StackConstIteratorHelper.cs" />
     <Compile Include="Iterators\Helpers\NotConst\ArrayIteratorHelper%271.cs" />
     <Compile Include="Iterators\Helpers\NotConst\ArrayIteratorHelper%272.cs" />
     <Compile Include="Iterators\Helpers\NotConst\ArrayListIteratorHelper.cs" />
