--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Iterators\Helpers\Const\ArrayConstIteratorHelper%272.cs" />
     <Compile Include="Iterators\Helpers\Const\ArrayListConstIteratorHelper.cs" />
     <Compile Include="Iterators\Helpers\Const\CollectionConstIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Helpers\Const\ConcurrentBagConstIteratorHelper%271.cs" />
     <Compile Include="Iterators\Helpers\Const\ConcurrentQueueConstIteratorHelper%271.cs" />
     <Compile Include="Iterators\Helpers\Const\ConcurrentStackConstIteratorHelper%271.cs" />
     <Compile Include="Iterators\Helpers\Const\ListConstIteratorHelper%271.cs" />
