--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Iterators\Helpers\Const\ListConstIteratorHelper%271.cs" />
     <Compile Include="Iterators\Helpers\Const\QueueConstIteratorHelper.cs" />
     <Compile Include="Iterators\Helpers\Const\ReadOnlyCollectionConstIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Helpers\Const\ReadOnlyDictionaryConstIteratorHelper%272.cs" />
     <Compile Include="Iterators\Helpers\Const\SortedListConstIteratorHelper.cs" />
     <Compile Include="Iterators\Helpers\Const\StackConstIteratorHelper.cs" />
     <Compile Include="Iterators\Helpers\NotConst\ArrayIteratorHelper%271.cs" />
