--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -42,34 +42,34 @@
     <Compile Include="Iterators\ConstIterator%271.cs" />
     <Compile Include="Iterators\ConstIterator%272.cs" />
     <Compile Include="Iterators\ConstIterator.cs" />
-    <Compile Include="Iterators\Helpers\Const\ArrayConstIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\Const\ArrayConstIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Helpers\Const\ArrayListConstIteratorHelper.cs" />
-    <Compile Include="Iterators\Helpers\Const\CollectionConstIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\Const\ConcurrentBagConstIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\Const\ConcurrentDictionaryConstIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Helpers\Const\ConcurrentQueueConstIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\Const\ConcurrentStackConstIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\Const\DictionaryConstIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Helpers\Const\ListConstIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\Const\QueueConstIteratorHelper.cs" />
-    <Compile Include="Iterators\Helpers\Const\ReadOnlyCollectionConstIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\Const\ReadOnlyDictionaryConstIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Helpers\Const\SortedListConstIteratorHelper.cs" />
-    <Compile Include="Iterators\Helpers\Const\StackConstIteratorHelper.cs" />
-    <Compile Include="Iterators\Helpers\NotConst\ArrayIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\NotConst\ArrayIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Helpers\NotConst\ArrayListIteratorHelper.cs" />
-    <Compile Include="Iterators\Helpers\NotConst\CollectionIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\NotConst\ConcurrentBagIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\NotConst\ConcurrentDictionaryIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Helpers\NotConst\ConcurrentQueueIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\NotConst\ConcurrentStackIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\NotConst\DictionaryIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Helpers\NotConst\ListIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Helpers\NotConst\QueueIteratorHelper.cs" />
-    <Compile Include="Iterators\Helpers\NotConst\SortedListIteratorHelper.cs" />
-    <Compile Include="Iterators\Helpers\NotConst\StackIteratorHelper.cs" />
+    <Compile Include="Iterators\Detail\Const\ArrayConstIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Detail\Const\ArrayConstIteratorHelper%272.cs" />
+    <Compile Include="Iterators\Detail\Const\ArrayListConstIteratorHelper.cs" />
+    <Compile Include="Iterators\Detail\Const\CollectionConstIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Detail\Const\ConcurrentBagConstIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Detail\Const\ConcurrentDictionaryConstIteratorHelper%272.cs" />
+    <Compile Include="Iterators\Detail\Const\ConcurrentQueueConstIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Detail\Const\ConcurrentStackConstIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Detail\Const\DictionaryConstIteratorHelper%272.cs" />
+    <Compile Include="Iterators\Detail\Const\ListConstIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Detail\Const\QueueConstIteratorHelper.cs" />
+    <Compile Include="Iterators\Detail\Const\ReadOnlyCollectionConstIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Detail\Const\ReadOnlyDictionaryConstIteratorHelper%272.cs" />
+    <Compile Include="Iterators\Detail\Const\SortedListConstIteratorHelper.cs" />
+    <Compile Include="Iterators\Detail\Const\StackConstIteratorHelper.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ArrayIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ArrayIteratorHelper%272.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ArrayListIteratorHelper.cs" />
+    <Compile Include="Iterators\Detail\NotConst\CollectionIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ConcurrentBagIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ConcurrentDictionaryIteratorHelper%272.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ConcurrentQueueIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ConcurrentStackIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Detail\NotConst\DictionaryIteratorHelper%272.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ListIteratorHelper%271.cs" />
+    <Compile Include="Iterators\Detail\NotConst\QueueIteratorHelper.cs" />
+    <Compile Include="Iterators\Detail\NotConst\SortedListIteratorHelper.cs" />
+    <Compile Include="Iterators\Detail\NotConst\StackIteratorHelper.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%271.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%272.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator.cs" />
