Rename iterator helpers

--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -57,19 +57,19 @@
     <Compile Include="Iterators\Detail\Const\ReadOnlyDictionaryConstIteratorHelper%272.cs" />
     <Compile Include="Iterators\Detail\Const\SortedListConstIteratorHelper.cs" />
     <Compile Include="Iterators\Detail\Const\StackConstIteratorHelper.cs" />
-    <Compile Include="Iterators\Detail\NotConst\ArrayIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Detail\NotConst\ArrayIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Detail\NotConst\ArrayListIteratorHelper.cs" />
-    <Compile Include="Iterators\Detail\NotConst\CollectionIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Detail\NotConst\ConcurrentBagIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Detail\NotConst\ConcurrentDictionaryIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Detail\NotConst\ConcurrentQueueIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Detail\NotConst\ConcurrentStackIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Detail\NotConst\DictionaryIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Detail\NotConst\ListIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Detail\NotConst\QueueIteratorHelper.cs" />
-    <Compile Include="Iterators\Detail\NotConst\SortedListIteratorHelper.cs" />
-    <Compile Include="Iterators\Detail\NotConst\StackIteratorHelper.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ArrayIterator%271.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ArrayIterator%272.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ArrayListIterator.cs" />
+    <Compile Include="Iterators\Detail\NotConst\CollectionIterator%271.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ConcurrentBagIterator%271.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ConcurrentDictionaryIterator%272.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ConcurrentQueueIterator%271.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ConcurrentStackIterator%271.cs" />
+    <Compile Include="Iterators\Detail\NotConst\DictionaryIterator%272.cs" />
+    <Compile Include="Iterators\Detail\NotConst\ListIterator%271.cs" />
+    <Compile Include="Iterators\Detail\NotConst\QueueIterator.cs" />
+    <Compile Include="Iterators\Detail\NotConst\SortedListIterator.cs" />
+    <Compile Include="Iterators\Detail\NotConst\StackIterator.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%271.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%272.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator.cs" />
