Rename const iterator helpers

--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -42,21 +42,21 @@
     <Compile Include="Iterators\ConstIterator%271.cs" />
     <Compile Include="Iterators\ConstIterator%272.cs" />
     <Compile Include="Iterators\ConstIterator.cs" />
-    <Compile Include="Iterators\Detail\Const\ArrayConstIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Detail\Const\ArrayConstIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Detail\Const\ArrayListConstIteratorHelper.cs" />
-    <Compile Include="Iterators\Detail\Const\CollectionConstIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Detail\Const\ConcurrentBagConstIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Detail\Const\ConcurrentDictionaryConstIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Detail\Const\ConcurrentQueueConstIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Detail\Const\ConcurrentStackConstIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Detail\Const\DictionaryConstIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Detail\Const\ListConstIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Detail\Const\QueueConstIteratorHelper.cs" />
-    <Compile Include="Iterators\Detail\Const\ReadOnlyCollectionConstIteratorHelper%271.cs" />
-    <Compile Include="Iterators\Detail\Const\ReadOnlyDictionaryConstIteratorHelper%272.cs" />
-    <Compile Include="Iterators\Detail\Const\SortedListConstIteratorHelper.cs" />
-    <Compile Include="Iterators\Detail\Const\StackConstIteratorHelper.cs" />
+    <Compile Include="Iterators\Detail\Const\ArrayConstIterator%271.cs" />
+    <Compile Include="Iterators\Detail\Const\ArrayConstIterator%272.cs" />
+    <Compile Include="Iterators\Detail\Const\ArrayListConstIterator.cs" />
+    <Compile Include="Iterators\Detail\Const\CollectionConstIterator%271.cs" />
+    <Compile Include="Iterators\Detail\Const\ConcurrentBagConstIterator%271.cs" />
+    <Compile Include="Iterators\Detail\Const\ConcurrentDictionaryConstIterator%272.cs" />
+    <Compile Include="Iterators\Detail\Const\ConcurrentQueueConstIterator%271.cs" />
+    <Compile Include="Iterators\Detail\Const\ConcurrentStackConstIterator%271.cs" />
+    <Compile Include="Iterators\Detail\Const\DictionaryConstIterator%272.cs" />
+    <Compile Include="Iterators\Detail\Const\ListConstIterator%271.cs" />
+    <Compile Include="Iterators\Detail\Const\QueueConstIterator.cs" />
+    <Compile Include="Iterators\Detail\Const\ReadOnlyCollectionConstIterator%271.cs" />
+    <Compile Include="Iterators\Detail\Const\ReadOnlyDictionaryConstIterator%272.cs" />
+    <Compile Include="Iterators\Detail\Const\SortedListConstIterator.cs" />
+    <Compile Include="Iterators\Detail\Const\StackConstIterator.cs" />
     <Compile Include="Iterators\Detail\NotConst\ArrayIterator%271.cs" />
     <Compile Include="Iterators\Detail\NotConst\ArrayIterator%272.cs" />
     <Compile Include="Iterators\Detail\NotConst\ArrayListIterator.cs" />
