--- a/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
+++ b/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Iterators\Detail\NotConst\ArrayListIterator_Tests.cs" />
     <Compile Include="Iterators\Detail\NotConst\CollectionIterator%271_Tests.cs" />
     <Compile Include="Iterators\Detail\NotConst\ListIterator%271_Tests.cs" />
+    <Compile Include="Iterators\Detail\NotConst\SortedListIterator_Tests.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%271_Tests.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%272_Tests.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator_Tests.cs" />
