--- a/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
+++ b/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Iterators\ConstIterator_Tests.cs" />
     <Compile Include="Iterators\Detail\Const\ArrayConstIterator%271_Tests.cs" />
     <Compile Include="Iterators\Detail\Const\ArrayConstIterator%272_Tests.cs" />
+    <Compile Include="Iterators\Detail\Const\ArrayListConstIterator_Tests.cs" />
     <Compile Include="Iterators\Detail\Const\ListConstIterator%271_Tests.cs" />
     <Compile Include="Iterators\Detail\NotConst\ArrayIterator%271_Tests.cs" />
     <Compile Include="Iterators\Detail\NotConst\ArrayIterator%272_Tests.cs" />
