--- a/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
+++ b/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Iterators\Detail\Const\ArrayConstIterator%271_Tests.cs" />
     <Compile Include="Iterators\Detail\Const\ArrayConstIterator%272_Tests.cs" />
     <Compile Include="Iterators\Detail\Const\ArrayListConstIterator_Tests.cs" />
+    <Compile Include="Iterators\Detail\Const\CollectionConstIterator%271_Tests.cs" />
     <Compile Include="Iterators\Detail\Const\ListConstIterator%271_Tests.cs" />
     <Compile Include="Iterators\Detail\NotConst\ArrayIterator%271_Tests.cs" />
     <Compile Include="Iterators\Detail\NotConst\ArrayIterator%272_Tests.cs" />
