--- a/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
+++ b/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Iterators\Detail\Const\ConcurrentDictionaryConstIterator%272_Tests.cs" />
     <Compile Include="Iterators\Detail\Const\DictionaryConstIterator%272_Tests.cs" />
     <Compile Include="Iterators\Detail\Const\ListConstIterator%271_Tests.cs" />
+    <Compile Include="Iterators\Detail\Const\SortedListConstIterator_Tests.cs" />
     <Compile Include="Iterators\Detail\NotConst\ArrayIterator%271_Tests.cs" />
     <Compile Include="Iterators\Detail\NotConst\ArrayIterator%272_Tests.cs" />
     <Compile Include="Iterators\Detail\NotConst\ArrayListIterator_Tests.cs" />
