--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Iterators\Detail\NotConst\ListIterator%271.cs" />
     <Compile Include="Iterators\Detail\NotConst\SortedListIterator.cs" />
     <Compile Include="Iterators\Interfaces\Adapters\IIteratorAdapter%271.cs" />
+    <Compile Include="Iterators\Interfaces\Adapters\IIteratorAdapter%272.cs" />
     <Compile Include="Iterators\Interfaces\Adapters\IIteratorAdapter.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%271.cs" />
     <Compile Include="Iterators\Interfaces\IConstIterator%272.cs" />
