--- a/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
+++ b/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Iterators\Detail\NotConst\DictionaryIterator%272_Tests.cs" />
     <Compile Include="Iterators\Detail\NotConst\ListIterator%271_Tests.cs" />
     <Compile Include="Iterators\Detail\NotConst\SortedListIterator_Tests.cs" />
+    <Compile Include="Iterators\Interfaces\Adapters\IConstIteratorAdapter%271_Tests.cs" />
     <Compile Include="Iterators\Interfaces\Adapters\IConstIteratorAdapter_Tests.cs" />
     <Compile Include="Iterators\Interfaces\Adapters\IIteratorAdapter%271_Tests.cs" />
     <Compile Include="Iterators\Interfaces\Adapters\IIteratorAdapter%272_Tests.cs" />
