--- a/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
+++ b/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
@@ -81,7 +81,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Iterators\Adapters\Const\ArrayConstIteratorAdapter%271_Tests.cs" />
     <Compile Include="Iterators\Adapters\Const\ListConstIteratorAdapter%271_Tests.cs" />
+    <Compile Include="Iterators\Adapters\NotConst\ArrayIteratorAdapter%271_Tests.cs" />
     <Compile Include="Iterators\Adapters\NotConst\ListIteratorAdapter%271_Tests.cs" />
     <Compile Include="Iterators\ConstIterator%271_Tests.cs" />
     <Compile Include="Iterators\ConstIterator%272_Tests.cs" />
