--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -40,10 +40,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Iterators\Adapters\Base\BaseArrayIteratorAdapter%271.cs" />
+    <Compile Include="Iterators\Adapters\Base\BaseCollectionIteratorAdapter%271.cs" />
     <Compile Include="Iterators\Adapters\Base\BaseListIteratorAdapter%271.cs" />
     <Compile Include="Iterators\Adapters\Const\ArrayConstIteratorAdapter%271.cs" />
+    <Compile Include="Iterators\Adapters\Const\CollectionConstIteratorAdapter%271.cs" />
     <Compile Include="Iterators\Adapters\Const\ListConstIteratorAdapter%271.cs" />
     <Compile Include="Iterators\Adapters\NotConst\ArrayIteratorAdapter%271.cs" />
+    <Compile Include="Iterators\Adapters\NotConst\CollectionIteratorAdapter%271.cs" />
     <Compile Include="Iterators\Adapters\NotConst\ListIteratorAdapter%271.cs" />
     <Compile Include="Iterators\ConstIterator%271.cs" />
     <Compile Include="Iterators\ConstIterator%272.cs" />
