--- a/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
+++ b/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
@@ -82,11 +82,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Iterators\Adapters\Const\ArrayConstIteratorAdapter%271_Tests.cs" />
+    <Compile Include="Iterators\Adapters\Const\ArrayConstIteratorAdapter%272_Tests.cs" />
     <Compile Include="Iterators\Adapters\Const\ArrayListConstIteratorAdapter_Tests.cs" />
     <Compile Include="Iterators\Adapters\Const\CollectionConstIteratorAdapter%271_Tests.cs" />
     <Compile Include="Iterators\Adapters\Const\ListConstIteratorAdapter%271_Tests.cs" />
     <Compile Include="Iterators\Adapters\Const\SortedListConstIteratorAdapter_Tests.cs" />
     <Compile Include="Iterators\Adapters\NotConst\ArrayIteratorAdapter%271_Tests.cs" />
+    <Compile Include="Iterators\Adapters\NotConst\ArrayIteratorAdapter%272_Tests.cs" />
     <Compile Include="Iterators\Adapters\NotConst\ArrayListIteratorAdapter_Tests.cs" />
     <Compile Include="Iterators\Adapters\NotConst\CollectionIteratorAdapter%271_Tests.cs" />
     <Compile Include="Iterators\Adapters\NotConst\ListIteratorAdapter%271_Tests.cs" />
