--- a/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
+++ b/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Iterators\Adapters\Const\DictionaryConstIteratorAdapter%272_Tests.cs" />
     <Compile Include="Iterators\Adapters\Const\ListConstIteratorAdapter%271_Tests.cs" />
     <Compile Include="Iterators\Adapters\Const\ReadOnlyCollectionConstIteratorAdapter%271_Tests.cs" />
+    <Compile Include="Iterators\Adapters\Const\ReadOnlyDictionaryConstIteratorAdapter%272_Tests.cs" />
     <Compile Include="Iterators\Adapters\Const\SortedListConstIteratorAdapter_Tests.cs" />
     <Compile Include="Iterators\Adapters\NotConst\ArrayIteratorAdapter%271_Tests.cs" />
     <Compile Include="Iterators\Adapters\NotConst\ArrayIteratorAdapter%272_Tests.cs" />
